# PROTEI

./: README.md
DEVELOP/: CMakeLists.txt  HOMETASK_1.txt
DEVELOP/cmake/: cppcheck.cmake
DEVELOP/first_version/: main.cpp
DEVELOP/include/: AppSettings.h  DataPool.h  Menu.h  Tests.h  config.hpp  console_menu.h  log.h
DEVELOP/screenshots/: address_sanitizer.txt
DEVELOP/src/: AppSettings.cpp  DataPool.cpp  Menu.cpp  Tests.cpp  console_menu.cpp  log.cpp  main.cpp
DEVELOP/tests/: CMakeLists.txt  test_menu.cpp
